test/files/neg/macro-invalidusage-badtargs/Macros_Test_2.scala
object Macros {
  def foo(x: Int) = macro Impls.foo
}

object Test extends App {
  import Macros._
  val s: String = foo[String](42)
}